# ibx-acquisition

./: CMakeLists.txt  README.md  acquisition.cc
include/: FPGAInterface.hh  TriggeredAcquisition.hh
src/: FPGAInterface.cc  TriggeredAcquisition.cc
